# 4d-paper

./: .flake8  .gitignore  4d-paper-doubao.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.example  config.yaml
docs/: api.md  index.md
scripts/: start.sh  stop.sh
src/agents/data_management/: __init__.py  data_deduplication.py  data_encryption.py  data_ingestion.py  deduplication_scheduler.py  four_d_data_handler.py
src/agents/discussion/: __init__.py  discussion_manager.py
src/agents/notification/: __init__.py  user_notifier.py
src/agents/orchestrator/: orchestrator.py  task_queue.py
src/agents/paper_generation/: __init__.py  multi_dim_renderer.py  template_engine.py  version_manager.py
src/agents/publication/: blockchain_cert.py  timestamp_service.py
src/agents/stats/: __init__.py  stats_manager.py
src/api/: dependencies.py  main.py
src/api/routes/: data_routes.py  extensions_routes.py  user_routes.py
src/core/i18n/: translator.py
src/core/models/: data_model.py  discussion_model.py  paper_model.py  stats_model.py  user_model.py
src/core/security/: __init__.py  auth.py  encryption.py  hash_utils.py  key_manager.py
src/extensions/: format_converter.py  latex_template.py
src/storage/: __init__.py  timeseries_db.py
src/tools/: utils.py
templates/latex/: default.tex
tests/: conftest.py  test_api.py  test_data_deduplication.py  test_data_ingestion.py  test_deduplication.py  test_deduplication_alerts.py  test_extensions.py  test_i18n.py  test_imports.py  test_paper_version.py
